[package]
name = "pcrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
byteorder = "1.4.3"
clap = { version = "4.2.5", features = ["derive"] }
etherparse = "0.13.0"
hex = "0.4.3"
hexdump = "0.1.1"
pcap = "1.0.0"
regex = "1.8.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
